Refactored dumping of variables a bit, so that all dump() functions accept infinite amount of arguments and all of those arguments will be dumped. Added string_dump() and Debugger::stringDump() functions to returning dumped variables into strings. Added console_dump() and Debugger::consoleDump() functions that dump their arguments into browser's JavaScript console.

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     	"psr-0": { "MD\\Foundation": "src/" },
         "files": [
             "src/constants.php",
-            "src/functions.php"
+            "src/MD/functions.php"
         ]
     }
 }
