Tweaks to Travis CI config.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,9 @@ before_script:
 notifications:
   email:
     - michal@michaldudek.pl
+
+matrix:
+  exclude:
+  allow_failures:
+    - php: hhvm
+    - php: 5.6
