--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: php
 php:
+  - 7.0
   - 5.6
   - 5.5
   - 5.4
@@ -17,3 +18,4 @@ matrix:
   exclude:
   allow_failures:
     - php: hhvm
+    - php: 7.0
