--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,18 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Michał Dudek",
+            "name": "Michał Pałys-Dudek",
             "email": "michal@michaldudek.pl"
         }
     ],
     "require": {
         "php": ">=5.3.3",
         "psr/log": ">=1.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~4.8",
+        "squizlabs/php_codesniffer": "~2.3",
+        "phpmd/phpmd" : "~2.2"
     },
     "autoload": {
     	"psr-0": {
