--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,7 +11,8 @@
     processIsolation            = "false"
     stopOnFailure               = "false"
     syntaxCheck                 = "false"
-    bootstrap                   = "tests/bootstrap.php" >
+    bootstrap                   = "vendor/autoload.php"
+>
 
     <testsuites>
         <testsuite name="MD Foundation Test Suite">
