--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,11 @@
         "squizlabs/php_codesniffer": "~2.3",
         "phpmd/phpmd" : "~2.2"
     },
+    "extra": {
+        "branch-alias": {
+            "dev-release/0.9": "0.9.x-dev"
+        }
+    },
     "autoload": {
     	"psr-0": {
             "MD\\Foundation\\Tests": "tests/",
