--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     ],
     "require": {
         "php": ">=5.6",
-        "psr/log": ">=1.0"
+        "psr/log": ">=1.0",
+        "ext-mbstring": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.6",
