--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": ">=5.6",
+        "php": ">=5.6,<7.2",
         "psr/log": ">=1.0",
         "ext-mbstring": "*"
     },
@@ -19,6 +19,11 @@
         "phpunit/phpunit": "~5.6",
         "squizlabs/php_codesniffer": "~2.3",
         "phpmd/phpmd" : "~2.2"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-release/0.11": "0.11.x-dev"
+        }
     },
     "autoload": {
     	"psr-0": {
